<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TesouroNacional</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ano">Ano</string>
    <string name="TaxaRoi">Taxa ROI</string>
    <string name="Min_Compra">Min. Compra</string>
    <string name="titles_filter_prompt">Pesquisa de Títulos</string>

    <string-array name="years_array">
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
    </string-array>

    <string name="pesquisar">Pesquisar</string>
    <string name="title_activity_titulo_detalhe">TituloDetalheActivity</string>

</resources>